objects/fcio1__ProvisionedResource__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__AllocatedResources__c</fullName>
        <label>Engagement</label>
        <referenceTo>fcio1__Engagement__c</referenceTo>
        <relationshipName>Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fcio1__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Fullcast Resource</label>
    <nameField>
        <label>Resources Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>